Fix visibility bug in minicart.scss

--- a/src/component/MiniCart/MiniCart.scss
+++ b/src/component/MiniCart/MiniCart.scss
@@ -38,7 +38,7 @@
   background: #fff;
 
   transition: 150ms;
-  visibility: none;
+  visibility: hidden;
   opacity: 0;
 
   &.active {
